Enhance transcription configuration and UI: add model selection, improve button layout, and update environment variables

--- a/src/.env.sample
+++ b/src/.env.sample
@@ -9,6 +9,11 @@ AZURE_WHISPER_MODEL="whisper"
 STORAGE_ACCOUNT_NAME="mainstorage"
 DEFAULT_CONTAINER="mainproject"
 
+#Optional: will get defaults
 AUDIO_FOLDER="audios"
 TRANSCRIPTION_FOLDER="transcriptions"
 EVAL_FOLDER="evaluations"
+LLM_ANALYSIS_FOLDER=
+
+#Optional: using latest gpt-4o-audio for transcription
+AZURE_AUDIO_MODEL=
