Minor usablity updates

--- a/src/.env.sample
+++ b/src/.env.sample
@@ -1,11 +1,13 @@
+# Azure OpenAI related configuration
 
-AZURE_OPENAI_DEPLOYMENT_NAME="gpt-4o"
 AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_API_VERSION= "2024-05-01-preview"
-
+AZURE_OPENAI_API_VERSION="2024-05-01-preview"
+AZURE_OPENAI_DEPLOYMENT_NAME="gpt-4o"
 AZURE_WHISPER_MODEL="whisper"
+#Optional: using latest gpt-4o-audio for transcription
+AZURE_AUDIO_MODEL=
 
-#Blob storage folder:
+# Storage related settings
 STORAGE_ACCOUNT_NAME="mainstorage"
 DEFAULT_CONTAINER="mainproject"
 
@@ -14,6 +16,3 @@ AUDIO_FOLDER="audios"
 TRANSCRIPTION_FOLDER="transcriptions"
 EVAL_FOLDER="evaluations"
 LLM_ANALYSIS_FOLDER=
-
-#Optional: using latest gpt-4o-audio for transcription
-AZURE_AUDIO_MODEL=
