--- a/src/.env.sample
+++ b/src/.env.sample
@@ -3,9 +3,10 @@
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_API_VERSION="2024-05-01-preview"
 AZURE_OPENAI_DEPLOYMENT_NAME="gpt-4o"
+AZURE_OPENAI_EMBEDDING_MODEL="text-embedding-ada-002"
+#transciptions models
 AZURE_WHISPER_MODEL="whisper"
-#Optional: using latest gpt-4o-audio for transcription
-AZURE_AUDIO_MODEL=
+AZURE_AUDIO_MODEL="gpt-4o-audio-preview"
 
 # Storage related settings
 STORAGE_ACCOUNT_NAME="mainstorage"
@@ -16,3 +17,11 @@ AUDIO_FOLDER="audios"
 TRANSCRIPTION_FOLDER="transcriptions"
 EVAL_FOLDER="evaluations"
 LLM_ANALYSIS_FOLDER=
+
+
+#searcj index name
+#make sure to update your access to "Search Service Contributor" & 
+
+AZURE_SEARCH_ENDPOINT="<https://CHANGE_THIS.search.windows.net>"
+INDEX_NAME="mainproject-index"
+
