--- a/src/.env.sample
+++ b/src/.env.sample
@@ -19,9 +19,11 @@ EVAL_FOLDER="evaluations"
 LLM_ANALYSIS_FOLDER=
 
 
-#searcj index name
+#search index name
 #make sure to update your access to "Search Service Contributor" & 
 
 AZURE_SEARCH_ENDPOINT="<https://CHANGE_THIS.search.windows.net>"
 INDEX_NAME="mainproject-index"
 
+#For sink with Storage queue and functions/function_app
+STORAGE_QUEUE_NAME=
