--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ python-dotenv==1.0.1
 azure-identity==1.19.0
 pandas
 azure-storage-blob==12.24.0
+azure-storage-queue==12.12.0
 openpyxl==3.1.5
 streamlit==1.41.0
 azure-cognitiveservices-speech==1.41.1
